# dog-cli

./: README.md  README.zh-CN.md  install.sh  pyproject.toml  update_patterns.py
dog/: __init__.py  __main__.py  cli.py  patterns.py  runner.py
tests/: test_cli.py  test_runner.py
