[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dog-cli"
version = "0.1.0"
description = "Resilient wrapper for Claude Code / OpenAI Codex — auto-retries on API errors & timeouts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pexpect>=4.9",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
dog = "dog.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dog*"]
